--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -4,3 +4,7 @@ Duplicate.userForm.username=*Such username already exists.
 Invalid.userForm.username=*Username must contain only letters and digits.
 Size.userForm.password=*Password must contain 4 characters or more.
 Different.userForm.password=*Password don't match.
+Required.stationTitle=*This field can't be empty.
+Size.stationTitle=*Title must be between 3 and 50 characters.
+Duplicate.stationTitle=*Such station already exists.
+Invalid.stationTitle=*Latin letters, digits, hyphens, spaces are allowed.
