TrainValidator added, now on crud page validation works properly for spring forms

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -4,7 +4,14 @@ Duplicate.userForm.username=*Such username already exists.
 Invalid.userForm.username=*Username must contain only letters and digits.
 Size.userForm.password=*Password must contain 4 characters or more.
 Different.userForm.password=*Password don't match.
+
 Required.stationTitle=*This field can't be empty.
 Size.stationTitle=*Title must be between 3 and 50 characters.
 Duplicate.stationTitle=*Such station already exists.
-Invalid.stationTitle=*Latin letters, digits, hyphens, spaces are allowed.
+Invalid.stationTitle=*Only latin letters, digits, hyphens and spaces are allowed.
+
+Required.trainName=*This field can't be empty.
+Size.trainName=*Train name must be between 3 and 20 characters.
+Duplicate.trainName=*Train with the same name already exists.
+Wrong.capacity=*The train must contain at least one seat.
+Invalid.trainName=*Only latin letters, digits and hyphens are allowed.
