added ticket system functionality v1.0

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -14,4 +14,15 @@ Required.trainName=*This field can't be empty.
 Size.trainName=*Train name must be between 3 and 20 characters.
 Duplicate.trainName=*Train with the same name already exists.
 Wrong.capacity=*The train must contain at least one seat.
+Wrong.capacity2=*Capacity must not exceed 1000 seats.
 Invalid.trainName=*Only latin letters, digits and hyphens are allowed.
+typeMismatch.capacity=*Invalid capacity
+
+
+Size.firstName=*Last name must be between 1 and 100 characters.
+Size.lastName=*Last name must be between 1 and 100 characters.
+Invalid.name=*Only latin letters, hyphens and spaces are allowed.
+Invalid.birthdate=*Birthdate cannot be later than the current date.
+Duplicate.passenger=*Such passenger is already checked in for this trip.
+
+typeMismatch.birthDate=*Fill in the field birthdate correctly.
