minor changes in TicketController

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
