now employee can set route for train

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,10 +5,7 @@ Invalid.userForm.username=*Username must contain only letters and digits.
 Size.userForm.password=*Password must contain 4 characters or more.
 Different.userForm.password=*Password don't match.
 
-Required.stationTitle=*This field can't be empty.
-Size.stationTitle=*Title must be between 3 and 50 characters.
 Duplicate.stationTitle=*Such station already exists.
-Invalid.stationTitle=*Only latin letters, digits, hyphens and spaces are allowed.
 
 Required.trainName=*This field can't be empty.
 Size.trainName=*Train name must be between 3 and 20 characters.
@@ -16,7 +13,6 @@ Duplicate.trainName=*Train with the same name already exists.
 Wrong.capacity=*The train must contain at least one seat.
 Wrong.capacity2=*Capacity must not exceed 1000 seats.
 Invalid.trainName=*Only latin letters, digits and hyphens are allowed.
-typeMismatch.capacity=*Invalid capacity
 
 
 Size.firstName=*Last name must be between 1 and 100 characters.
@@ -25,4 +21,24 @@ Invalid.name=*Only latin letters, hyphens and spaces are allowed.
 Invalid.birthdate=*Birthdate cannot be later than the current date.
 Duplicate.passenger=*Such passenger is already checked in for this trip.
 
-typeMismatch.birthDate=*Fill in the field birthdate correctly.
+typeMismatch.birthDate=*Fill in field with date correctly.
+
+
+BlankDept.time.BeginDTO=*Departure time is not selected.
+Invalid.time.current=*Departure time cannot be earlier than now plus half an hour.
+BlankArr.time.BeginDTO=*Arrival time is not selected.
+Invalid.time.BeginDTO=*Minimum route duration 15 minutes.
+Invalid.time.BeginDTO.2=*Arrival time cannot be earlier than departure time.
+Train.is.unavailable=*This train will be on the way at the selected time.
+
+
+Empty.station=*Station is not selected.
+DuplicateStation.inRoute=*The arrival station cannot be the same as the departure station.
+
+Empty.time=*Arrival time is not selected.
+Invalid.routeTime=*Arrival time cannot be earlier than departure time of last station.
+Invalid.routeTime.2=*Arrival time cannot be earlier than arrival time of last station plus stop time.
+Empty.stop.section=*Stop duration is not selected.
+
+TimeIsMoreThanMain=*Arrival time cannot be later than arrival time for whole route.
+
