--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sargue</groupId>
+            <artifactId>java-time-jsptags</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
         <!-- Spring-security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
