--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -3,7 +3,7 @@ Size.userForm.username=*Username must be between 4 and 32 characters.
 Duplicate.userForm.username=*Such username already exists.
 Invalid.userForm.username=*Username must contain only letters and digits.
 Size.userForm.password=*Password must contain 4 characters or more.
-Different.userForm.password=*Password don't match.
+Different.userForm.password=*Passwords don't match.
 
 Duplicate.stationTitle=*Such station already exists.
 
@@ -15,14 +15,14 @@ Wrong.capacity2=*Capacity must not exceed 1000 seats.
 Invalid.trainName=*Only latin letters, digits and hyphens are allowed.
 
 
-Size.firstName=*Last name must be between 1 and 100 characters.
+Size.firstName=*First name must be between 1 and 100 characters.
 Size.lastName=*Last name must be between 1 and 100 characters.
 Invalid.name=*Only latin letters, hyphens and spaces are allowed.
 Invalid.birthdate=*Birthdate cannot be later than the current date.
 Duplicate.passenger=*Such passenger is already checked in for this trip.
 
 typeMismatch.birthDate=*Fill in field with date correctly.
-
+typeMismatch.capacity=*Invalid capacity
 
 BlankDept.time.BeginDTO=*Departure time is not selected.
 Invalid.time.current=*Departure time cannot be earlier than now plus half an hour.
