arrival timetable added

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -22,7 +22,9 @@ Invalid.birthdate=*Birthdate cannot be later than the current date.
 Duplicate.passenger=*Such passenger is already checked in for this trip.
 
 typeMismatch.birthDate=*Fill in field with date correctly.
-typeMismatch.capacity=*Invalid capacity
+typeMismatch.capacity=*Invalid capacity.
+Invalid.dateTime=*Invalid datetime.
+
 
 BlankDept.time.BeginDTO=*Departure time is not selected.
 Invalid.time.current=*Departure time cannot be earlier than now plus half an hour.
