ExceptionHandler added, little refactoring

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -26,11 +26,11 @@ typeMismatch.capacity=*Invalid capacity.
 Invalid.dateTime=*Invalid datetime.
 
 
-BlankDept.time.BeginDTO=*Departure time is not selected.
-Invalid.time.current=*Departure time cannot be earlier than now plus half an hour.
-BlankArr.time.BeginDTO=*Arrival time is not selected.
-Invalid.time.BeginDTO=*Minimum route duration 15 minutes.
-Invalid.time.BeginDTO.2=*Arrival time cannot be earlier than departure time.
+Blank.departureTime=*Departure time is not selected.
+Blank.arrivalTime=*Arrival time is not selected.
+Invalid.time.current=*Departure time cannot be earlier than now plus 5 minutes.
+Invalid.route.duration=*Minimum route duration 15 minutes.
+Invalid.arrivalTime=*Arrival time cannot be earlier than departure time.
 Train.is.unavailable=*This train will be on the way at the selected time.
 
 
@@ -39,7 +39,7 @@ DuplicateStation.inRoute=*The arrival station cannot be the same as the departur
 
 Empty.time=*Arrival time is not selected.
 Invalid.routeTime=*Arrival time cannot be earlier than departure time of last station.
-Invalid.routeTime.2=*Arrival time cannot be earlier than arrival time of last station plus stop time.
+Invalid.routeTime.2=*Arrival time cannot be earlier than arrival time of last station plus stop time and min route duration 15 min.
 Empty.stop.section=*Stop duration is not selected.
 
 TimeIsMoreThanMain=*Arrival time cannot be later than arrival time for whole route.
