--- a/pom.xml
+++ b/pom.xml
@@ -126,12 +126,6 @@
             <version>1.3.8</version>
         </dependency>
 
-      <!--  &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 &ndash;&gt;
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
-        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jms-client-bom -->
         <dependency>
@@ -139,6 +133,13 @@
             <artifactId>wildfly-jms-client-bom</artifactId>
             <version>21.0.0.Final</version>
             <type>pom</type>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.json.bind/javax.json.bind-api -->
+        <dependency>
+            <groupId>javax.json.bind</groupId>
+            <artifactId>javax.json.bind-api</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-jms -->
@@ -160,6 +161,11 @@
             <version>2.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.2</version>
+        </dependency>
 
     </dependencies>
 
