--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,8 +1,6 @@
 Required=*This field is required.
-Size.userForm.username=*Username must be between 4 and 32 characters.
-Duplicate.userForm.username=*Such username already exists.
-Invalid.userForm.username=*Username must contain only letters and digits.
-Size.userForm.password=*Password must contain 4 characters or more.
+
+Duplicate.userForm.username=*Such email address is already registered.
 Different.userForm.password=*Passwords don't match.
 
 Duplicate.stationTitle=*Such station already exists.
