Refactoring ticket purchase

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -22,7 +22,7 @@ Blank.arrivalTime=*Arrival time is not selected.
 Invalid.time.current=*Departure time cannot be earlier than now plus 5 minutes.
 Invalid.route.duration=*Minimum route duration 15 minutes.
 Invalid.arrivalTime=*Arrival time cannot be earlier than departure time.
-Train.is.unavailable=*This train will be on the way at the selected time.
+Train.is.unavailable=*This train is on the way at the selected time.
 
 
 Empty.station=*Station is not selected.
